# HelloGL

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  HelloGL.cpp  HelloGL.h  README.md  ToDo  conanfile.py  conanfile.txt
Shaders/: CMakeLists.txt  Light.frag  Light.vert  LightData.glsl  MaterialCommon.glsl  Technicolor.frag  Technicolor.vert  UberShader.frag  UberShader.vert  common.glsl
assets/model/birb/: Birb.mtl
assets/model/cube/: cube.blend  cube.blend1  cube.mtl
assets/model/icosphere/: IcoSphere.blend  IcoSphere.blend1  icosphere.mtl
include/: glad.h
include/imgui/: CMakeLists.txt
include/lib/: glfw3.lib
src/: CMakeLists.txt  Camera.cpp  Camera.h  HelloGL.cpp  HelloGL.h  glad.c
src/Components/: CMakeLists.txt  Camera.cpp  Camera.h  Light.cpp  Light.h  MeshRenderer.cpp  MeshRenderer.h  Transform.cpp  Transform.h
src/ECS/: CMakeLists.txt  Engine.cpp  Engine.h  Entity.cpp  Entity.h  Input.cpp  Input.h  Renderer.cpp  Renderer.h  Timer.cpp  Timer.h  Transform.cpp  Transform.h  World.cpp  World.h
src/ECS/Rendering/: CMakeLists.txt  Material.h  Renderer.cpp  Renderer.h
src/Resources/: AssetCache.cpp  AssetCache.h  CMakeLists.txt  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Texture.cpp  Texture.h
src/Shaders/: CMakeLists.txt  Shader.cpp  Shader.h  ShaderUniformBlock.h
